# atlas-historico

./: README.md  docker-compose.yaml  run.sh
backend/: .dockerignore  .env  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  deduplicate_smart.py  main.py  manual_events.json  models.py  populate_final.py  populate_massive.py  schemas.py
backend/app/etl/: base.py  registry.py
backend/app/etl/geonames/: loader.py
backend/app/etl/integrations/: seeder.py
backend/app/etl/kaggle/: adapter.py  auth.py  extractor.py  processor.py
backend/app/etl/seed/: adapter.py
backend/app/etl/wikidata/: adapter.py
backend/app/models/: __init__.py  events.py  geonames.py  integrations.py  kaggle.py  spatial.py  wikidata.py
backend/app/routes/: __init__.py  docs.py  etl.py  events.py  kaggle.py  populate.py  settings.py
backend/app/seeders/: integrations.py  spatial_seeder.py
backend/app/services/: __init__.py  deduplicate_service.py  event_service.py  populate_service.py  task_manager.py  wikidata_service.py
backend/app/utils/: __init__.py  helpers.py  spatial.py
backend/data/: manual_events.json
backend/docs/integrations/: kaggle.md
backend/scripts/: delete_specific.py  load_continents.py
db_init/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  FlyTo.jsx  MapFix.jsx  index.css  main.jsx  useTheme.jsx
frontend/src/context/: ETLContext.jsx  ToastContext.jsx
frontend/src/hooks/: useEventForm.js  useEvents.js  useIntegrationStatus.js  (+3 more)
(+31 files in other folders)
